--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^6.10.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-navigation": "^1.0.0-beta.7",
+    "react-router": "^3.2.3",
+    
     "react-scripts": "3.0.1"
   },
   "scripts": {
